# CQuery

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  app.json  app_id.txt
src/: GlobalContext.cpp  GlobalContext.h  TSourceEngineQuery.cpp  TSourceEngineQuery.h  demo.cpp  parsemsg.h
